# GoBid

./: .editorconfig  .env  .env.example  .env.local.example  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  MIGRATIONS.md  README.md  RELEASE.md  biome.json  lerna.json  next.config.ts  package-lock.json  package.json  renovate.json  tsconfig.build.json  tsconfig.eslint.json  turbo.json  vitest.config.mts
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agents/: pipeline_agents.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: dashboard.py  sources.py  tenders.py
backend/app/core/: settings.py
backend/app/db/: session.py
backend/app/jobs/: scheduler.py
backend/app/models/: tender.py
backend/app/schemas/: scrape.py  source.py  tender.py
backend/app/services/: africagateway_scraper.py  dedup_service.py  extractor_service.py  intelligence_service.py  pipeline_service.py  tender_store.py
backend/app/utils/: logger.py
backend/data/: africagateway_tenders.json
backend/gobid_africa_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: dev.ps1
backend/tests/: test_health.py
config/: africa-sources.json
config/prompts/: relevance_classifier.prompt.md
config/sources/: africa-onboarding-template.yaml
docs/: AFRICA_MVP_IMPLEMENTATION.md
docs/architecture/: SYSTEM_OVERVIEW.md
docs/runbooks/: LOCAL_SETUP.md
infra/docker/: docker-compose.yml
