[project]
name = "gobid-africa-backend"
version = "0.1.0"
description = "Africa-first tender intelligence backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "playwright>=1.50.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.7.0", "mypy>=1.12.0"]

[tool.ruff]
line-length = 100
